# pydatafs

./: LICENSE  README.md  pyproject.toml
pydatafs/: errors.py  files.py  filesystem.py  handle.py
